# Readding

./: README.md  main.py
ai-reading-lab/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
ai-reading-lab/.github/workflows/: ci.yml  weekly_digest.yml
ai-reading-lab/ai_lab/: aggregate.py  config.py  crawl.py  crawler.py  ingest.py  models.py  notifications.py  notify.py  ocr.py  summarize.py  utils.py
ai-reading-lab/config/: notifications.json.example  paper_ids.txt.example
ai-reading-lab/data/extracts/: 1912.07753v1.meta.json  1912.07753v1.txt
ai-reading-lab/prompts/: CURSOR_RULES.md  README.md  agent_system_prompt.md  cursor_task_recipes.md  requirements.txt
ai-reading-lab/scripts/: run_weekly.sh
ai-reading-lab/tests/: test_aggregate.py  test_ingest.py  test_snapshots.py  test_summarize.py
